HelloUltraviolet/Fixtures/RejectedSource/FFI/ForeignPredicateContext/Expected.uv
//! Expected diagnostic metadata for the ForeignPredicateContext rejected-source specimen.

expectedDiagnostic("E-SEM-2851", "requirement.23.ForeignPredicateContext")
